# realsense_example

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/capture/: capture.cpp  example.hpp
examples/pointcloud/: CMakeLists.txt  example.hpp  rs-pointcloud.cpp
